--- a/css/styles.css
+++ b/css/styles.css
@@ -1,43 +1,93 @@
 :root {
-    --primario: #6834a6;
-    --blanco: #FFF;
-    --negro: #000000;
-    --fuentePrincipal: 'Poppins', sans-serif;
+  --primario: #6834a6;
+  --blanco: #fff;
+  --negro: #000000;
+  --fuentePrincipal: "Poppins", sans-serif;
 }
 html {
-    font-size: 62.5%;
-    box-sizing: border-box;
+  font-size: 62.5%;
+  box-sizing: border-box;
 }
-*, *:before, *:after {
-    box-sizing: inherit;
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
 }
 body {
-    font-family: var(--fuentePrincipal);
-    font-size: 1.6rem;
-    line-height: 1.8;
+  font-family: var(--fuentePrincipal);
+  font-size: 1.6rem;
+  line-height: 1.8;
 }
-h1, h2, h3 {
-    font-weight: 900;
-    margin: 2rem 0;
+h1,
+h2,
+h3 {
+  font-weight: 900;
+  margin: 2rem 0;
 }
 h1 {
-    font-size: 5rem;
+  font-size: 5rem;
 }
 h2 {
-    font-size: 4.6rem;
+  font-size: 4.6rem;
 }
 h3 {
-    font-size: 3rem;
+  font-size: 3rem;
 }
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 img {
-    max-width: 100%;
-    display: block;
+  max-width: 100%;
+  display: block;
 }
 .contenedor {
-    max-width: 120rem;
-    margin: 0 auto;
-    width: 90%;
+  max-width: 120rem;
+  margin: 0 auto;
+  width: 90%;
+}
+
+/* Header */
+.header {
+  background-image: url(../img/header_bg.svg);
+  background-repeat: no-repeat;
+  background-position: top right;
+  background-size: 10rem;
+  padding: 5rem 0;
+}
+@media (min-width: 768px) {
+  .header {
+    background-size: 45rem;
+  }
+}
+@media (min-width: 992px) {
+  .header {
+    background-size: 60rem;
+  }
+}
+@media (min-width: 1440px) {
+  .header {
+    background-size: 90rem;
+  }
+}
+
+.header__contenedor {
+  max-width: 120rem;
+  margin: 0 auto;
+  width: 90%;
+}
+
+@media (min-width: 768px) {
+  .header__barra {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+.header__logo {
+  width: 15rem;
+  margin: 0 auto 3rem auto;
+}
+@media (min-width: 768px) {
+  .header__logo {
+    margin: 0;
+  }
 }
