STYLE: Añadir el diseño del boton del header
Agrega el diseño del boton del heading para su uso en diferentes dispositivos

--- a/css/styles.css
+++ b/css/styles.css
@@ -99,11 +99,27 @@ img {
 .header__heading {
   text-align: center;
   font-size: 3rem;
+  line-height: 1.2;
 }
 @media (min-width: 768px) {
   .header__heading {
     text-align: left;
     font-size: 5rem;
+  }
+}
+.header__boton {
+  background-color: var(--primario);
+  display: block;
+  padding: 1rem;
+  text-align: center;
+  color: var(--blanco);
+  margin-bottom: 4rem;
+}
+@media (min-width: 768px) {
+  .header__boton {
+    padding: 1rem 3rem;
+    display: inline-block;
+    margin-bottom: 0;
   }
 }
 
@@ -120,6 +136,9 @@ img {
   }
 }
 
+.navegacion__link {
+  color: var(--primario);
+}
 @media (min-width: 768px) {
   .navegacion__link {
     color: var(--blanco);
