--- a/css/styles.css
+++ b/css/styles.css
@@ -40,7 +40,8 @@ img {
   max-width: 100%;
   display: block;
 }
-.contenedor {
+
+[class$="__contenedor"] {
   max-width: 120rem;
   margin: 0 auto;
   width: 90%;
@@ -68,12 +69,6 @@ img {
   .header {
     background-size: 90rem;
   }
-}
-
-.header__contenedor {
-  max-width: 120rem;
-  margin: 0 auto;
-  width: 90%;
 }
 
 @media (min-width: 768px) {
@@ -143,4 +138,12 @@ img {
   .navegacion__link {
     color: var(--blanco);
   }
+}
+
+.nucleus {
+  margin-top: 3rem;
+}
+.nucleus__heading {
+  text-align: center;
+  margin-bottom: 5rem;
 }
