--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,11 @@ img {
   width: 90%;
 }
 
+[class$="__heading"] {
+  text-align: center;
+  margin-bottom: 5rem;
+}
+
 /* Header */
 .header {
   background-image: url(../img/header_bg.svg);
@@ -92,7 +97,6 @@ img {
   }
 }
 .header__heading {
-  text-align: center;
   font-size: 3rem;
   line-height: 1.2;
 }
@@ -115,6 +119,11 @@ img {
     padding: 1rem 3rem;
     display: inline-block;
     margin-bottom: 0;
+  }
+}
+@media (min-width: 768px) {
+  .header__grafico {
+    width: 35rem;
   }
 }
 
@@ -143,10 +152,7 @@ img {
 .nucleus {
   margin-top: 3rem;
 }
-.nucleus__heading {
-  text-align: center;
-  margin-bottom: 5rem;
-}
+
 .nucleus__grid {
   display: flex;
   flex-direction: column-reverse;
@@ -160,9 +166,8 @@ img {
   }
 }
 
-.listado {
-}
 .listado__elemento {
+  background-color: var(--blanco);
   box-shadow: 0px 0px 15px 3px rgb(0 0 0 / 0.15);
   padding: 2rem;
   margin-bottom: 5rem;
@@ -180,4 +185,21 @@ img {
 .listado__texto {
   margin: 0;
   font-size: 2rem;
+}
+
+/* Seguridad */
+.seguridad {
+  background-color: var(--primario);
+  padding: 10rem 0;
+}
+.seguridad__heading {
+  color: var(--blanco);
+}
+@media (min-width: 768px) {
+  .seguridad__grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 5rem;
+    align-items: center;
+  }
 }
