--- a/css/styles.css
+++ b/css/styles.css
@@ -52,6 +52,15 @@ img {
   margin-bottom: 5rem;
 }
 
+@media (min-width: 768px) {
+  [class$="__grid"] {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 5rem;
+    align-items: center;
+  }
+}
+
 /* Header */
 .header {
   background-image: url(../img/header_bg.svg);
@@ -178,10 +187,32 @@ img {
 .listado__elemento:hover {
   transform: scale(1.1);
 }
+@media (min-width: 768px) {
+  .listado__elemento--2col {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 2rem;
+  }
+}
 .listado__heading {
   font-size: 3rem;
   color: var(--primario);
   margin: 0;
+}
+.listado__numero {
+  color: var(--primario);
+  font-size: 6rem;
+  font-weight: 900;
+  margin: 0;
+  text-align: center;
+}
+@media (min-width: 768px) {
+  .listado__numero {
+    flex-basis: 20rem;
+    text-align: right;
+    font-size: 4rem;
+  }
 }
 .listado__texto {
   margin: 0;
@@ -217,11 +248,26 @@ img {
 .seguridad__heading {
   color: var(--blanco);
 }
+
+/* Comisiones */
 @media (min-width: 768px) {
-  .seguridad__grid {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    column-gap: 5rem;
+  .comisiones__grid {
+    align-items: flex-end;
+  }
+}
+@media (min-width: 998px) {
+  .comisiones__grid {
     align-items: center;
+  }
+}
+.comisiones__texto {
+  text-align: center;
+  font-size: 2.4rem;
+  font-weight: 700;
+}
+
+@media (min-width: 768px) {
+  .comisiones__texto {
+    text-align: left;
   }
 }
