--- a/css/styles.css
+++ b/css/styles.css
@@ -271,3 +271,49 @@ img {
     text-align: left;
   }
 }
+
+/* Testimoniales */
+.testimoniales {
+  background-color: var(--primario);
+  padding: 5rem 0;
+}
+.testimoniales__heading {
+  color: var(--blanco);
+}
+.testimoniales__grid {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 4rem;
+}
+@media (min-width: 768px) {
+  .testimoniales__grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+.testimonial {
+  box-shadow: 0px 0px 15px 3px rgb(0 0 0 / 0.15);
+  background-color: var(--blanco);
+  padding: 2rem;
+  position: relative;
+}
+.testimonial__texto {
+  padding-left: 4rem;
+}
+.testimonial__texto::before {
+  content: "";
+  background-image: url(../img/comilla.png);
+  background-repeat: no-repeat;
+  background-size: 3rem;
+  width: 3rem;
+  height: 3rem;
+  display: block;
+  position: absolute;
+  top: 3.3rem;
+  left: 1.3rem;
+}
+.testimonial__autor {
+  color: var(--primario);
+  font-weight: 700;
+  text-align: right;
+}
